# TareaTDD

./: README.md  dudo.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/juego/: arbitro_ronda.py  cacho.py  contador_pintas.py  dado.py  gestor_partida.py  jugador.py  validador_apuesta.py
src/servicios/: generador_aleatorio.py
testing/: test_arbitro_ronda.py  test_cacho.py  test_contador_pintas.py  test_dado.py  test_generador_aleatorio.py  test_gestor_partida.py  test_jugador.py  test_validador_apuesta.py
