[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarea-tdd"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["testing"]
pythonpath = ["src"]
addopts = "-v"
